# blackmagic-opencv-wrapper

./: .gitignore  CMakeLists.txt  README.md
src/: ComPtr.h  DeckLinkCapture.cpp  DeckLinkCapture.h  main.cpp
